<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LogInFragment">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EditTextEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:hint="@string/e_mail"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:errorEnabled="true"
            app:helperText="Zorunlu"
            app:helperTextTextColor="#E40909"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_mail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:hint="@string/e_mail"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:errorEnabled="true"
            app:helperText="Zorunlu"
            app:helperTextTextColor="#E40909"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogIn"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/ripple"
            android:text="@string/login"
            android:textAllCaps="false"
            android:backgroundTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:fontFamily="sans-serif"
            android:id="@+id/buttonSignInAnonymously"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ripple"
            app:backgroundTint="@color/blue"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonWithGoogle1"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple"
            android:text="@string/sign_in_anonymously"
            android:textAllCaps="false"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>





</androidx.constraintlayout.widget.ConstraintLayout>