<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="fragment"
            type="com.ahmetozaydin.ecommerceapp.fragment.CartFragment" />
        <variable
            name="adapter"
            type="com.ahmetozaydin.ecommerceapp.adapter.CartAdapter" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <FrameLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".fragment.CartFragment">

        <RelativeLayout
            android:visibility="invisible"
            android:id="@+id/emptyListMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleX="1.5"
                android:scaleY="1.5" />

            <CheckBox
                android:id="@+id/imageViewFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:button="@drawable/ic_cart"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textViewEmptyListMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewFavorite"
                android:layout_marginTop="6dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/cart_empty_list_message"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/wordTotal"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:layout_marginStart="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPurchase"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scaleY="0.8"
            android:scaleX="0.8"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="6dp"
            android:layout_gravity="center"
            android:background="@drawable/ripple"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:onClick="@{()-> fragment.checkOutProducts()}"
            android:text="@string/purchase"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>